# agent-failure-bench

./: .gitignore  CLAUDE.md  README.md  constitution.md  pyproject.toml
.claude/skills/verify/: SKILL.md
research/: annotation-guidelines.md  experiment-design.md  harbor-format-notes.md  related-work.md  taxonomy-v0.md  trail-mapping.md
schemas/: FailureAnnotation.schema.json  Trajectory.schema.json
specs/001-failure-taxonomy/: plan.md  spec.md  tasks.md
specs/002-trajectory-data-model/: plan.md  spec.md  tasks.md
specs/003-annotation-tool/: plan.md  spec.md  tasks.md
specs/004-pilot-run/: plan.md  spec.md  tasks.md
src/afb/: __init__.py  cli.py
src/afb/analysis/: __init__.py
src/afb/annotate/: __init__.py  app.py  store.py
src/afb/ingest/: __init__.py  harbor.py
src/afb/models/: __init__.py  annotation.py  taxonomy.py  trajectory.py
tests/: conftest.py  test_annotate_app.py  test_ingest.py  test_models.py  test_store.py  test_taxonomy_sync.py
tests/fixtures/: sample_trajectory.json
tests/fixtures/harbor_job/: config.json  lock.json  result.json
tests/fixtures/harbor_job/circuit-fibsqrt__ZAV5p9S/: config.json  result.json
tests/fixtures/harbor_job/circuit-fibsqrt__ZAV5p9S/verifier/: ctrf.json  test-stdout.txt
