[project]
name = "afb"
version = "0.1.0"
description = "Agent Failure Bench: measures agentic AI performance on terminal tasks and systematically explains failure causes via a two-axis failure taxonomy."
readme = "README.md"
authors = [
    { name = "RasDTU02", email = "s225786@dtu.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "textual>=8.2.8",
]

[project.scripts]
afb = "afb.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures"]
asyncio_mode = "auto"
